# OmegaRayTrace-Ultimate---GPU-edition

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  imgui.ini  readme.md
data/: 3cube_color.fbx  3cube_color.glb  bcp2cube.blend  bcp2cube.blend1  bcp2cube.fbx  big_plane.fbx  cornel.fbx  cornel_close.fbx  cube.blend  cube.blend1  cube.fbx  cube3.fbx  cube3_2.fbx  cube_tex.fbx  cyl.fbx  plan_cyl_tex.fbx  plan_torus.fbx  plan_torus_tex.fbx  plane.fbx  plane2.fbx  scene3.fbx  scene_color.fbx  test_mat.fbx  tri.fbx  wood_plan.fbx
res/shaders/: fragment.glsl  vertex.glsl
src/: ClFunctions.h  GPURenderer.h  GUI.h  Light.h  Material.h  Mesh.cpp  Mesh.h  MeshLoader.h  Object3D.h  Plane.h  SceneOperations.h  ShaderUtils.h  Sphere.h  Square.h  Triangle.h  camera.h  globals.h  kernel.cl  main.cpp  main.cu  mesh.cpp  mesh.h  ray.h  readme.md  shaders.cpp  shaders.h  transform.cpp  transform.h  vec3.h
src/OpenCL_src/: Bbox.cl  Camera.cl  HitData.cl  Light.cl  Material.cl  Plane.cl  Random.cl  Ray.cl  Scene.cl  Sphere.cl  Triangle.cl  Vec3.cl
tmp/moc/: moc_MyViewer.cpp  moc_predefs.h
